Release <dev>
=============
* new `MassUpdateForm.sort_fields`. Make optional MassUpdateForm fields sorting
* make possible globally customize MassUpdateForm
* removes async feature from Bulk update
* fixes support for 'MemoryFileUploadHandler' in bulk_update
* add `dry_run` option to bulk_update
* bulk_update now returns a page with pre/post action field values


Release 2.1
===========
* new action "Bulk Update"
* add support for ImageField / FileField
* add Django 4.1 support
* add Python 3.11 support
* Use Black for code formatting
* Merged #212 - Inspect the MRO (in reversed order) - https://github.com/saxix/django-adminactions/pull/212
* Merged #215 - Merge action support signals  - https://github.com/saxix/django-adminactions/pull/212
* Merged #207 - work with any collection to ignore fields - https://github.com/saxix/django-adminactions/pull/207
* Merged #206 - docs: Fix a few typos - https://github.com/saxix/django-adminactions/pull/206
* Merged #200 - Very lame fix for #199 - https://github.com/saxix/django-adminactions/pull/200


Release 2.0
===========
* new action "Find Duplicates"
* allows customization of exportable columns (`get_exportable_columns(request)`)
* allows customization od ExportForm (`get_export_form(request, export_type)`)
* Add Admin logging support (LogEntry)
* add Celery support
* MassUpdateForm sort fields by label
* BACKWARD INCOMPATIBLE: removed `modeladmin` from signals arguments
* BACKWARD INCOMPATIBLE: signals `request` argument is now optional to support async execution
* BACKWARD INCOMPATIBLE: Drop support for Django 2.x
* BACKWARD INCOMPATIBLE: Removes internal api SelectOptionsAttribute


Release 1.15
=============
* perms refactoring. Add module `consts` to handle import errors in some circumstances


Release 1.14
=============
* drop support Django 2.x
* added support to django 4 and python 3.10
* added portugues translations
* optimized extra permission creation
* mass_update_hints is now empty by default